[project]
name = "oop-in-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Leo", email = "leo.thms@gmx.de" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
oop-in-python = "oop_in_python:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
