[project]
name = "programmieren-uebungen"
version = "0.1.0"
description = "Übungen aus den Vorlesungen"
readme = "README.md"
authors = [
    { name = "Leo", email = "leo.thms@gmx.de" }
]
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "keyboard>=0.13.5",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]

[tool.uv]
package = false
